--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "mocha --exit"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "config": "^1.30.0",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "~4.15.5",
     "jsonwebtoken": "^8.2.0",
+    "mocha": "^5.0.5",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
+    "npm": "^5.8.0",
     "redis": "^2.8.0"
   }
 }
